--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -640,7 +640,6 @@
 
         </div>
 
-
         <div class="introduction  row">
 
             <div class="col-md-2"></div>
@@ -649,9 +648,7 @@
 
                 <div class="page-header animated">
 
-                    <h1>吉通恒远
-                        <small>合作共赢</small>
-                    </h1>
+                    <h1>吉通恒远 <small>合作共赢</small></h1>
 
                 </div>
 
@@ -662,35 +659,5 @@
         </div>
 
 
-        <div class="row" style="margin-bottom:100px ">
 
-            <div class="col-md-2"></div>
-
-            <div id="owl-demo" class="owl-carousel col-md-8">
-
-                <a class="item"><img src="__IMA__/item6.jpg" alt="" class="img-responsive"><span>图片</span></a>
-
-                <a class="item"><img src="__IMA__/item2.jpg" alt="" class="img-responsive"><span>图片</span></a>
-
-                <a class="item"><img src="__IMA__/item3.jpg" alt="" class="img-responsive"><span>图片</span></a>
-
-                <a class="item"><img src="__IMA__/item4.jpg" alt="" class="img-responsive"><span>图片</span></a>
-
-                <a class="item"><img src="__IMA__/item5.jpg" alt="" class="img-responsive"><span>图片</span></a>
-
-                <a class="item"><img src="__IMA__/item6.jpg" alt="" class="img-responsive"><span>图片</span></a>
-
-                <a class="item"><img src="__IMA__/item6.jpg" alt="" class="img-responsive"><span>图片</span></a>
-
-                <a class="item"><img src="__IMA__/item2.jpg" alt="" class="img-responsive"><span>图片</span></a>
-
-                <a class="item"><img src="__IMA__/item3.jpg" alt="" class="img-responsive"><span>图片</span></a>
-
-                <a class="item"><img src="__IMA__/item4.jpg" alt="" class="img-responsive"><span>图片</span></a>
-
-            </div>
-
-            <div class="col-md-2"></div>
-
-        </div>
         <include file="Public/common/footer.html"/>
