--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -242,104 +242,107 @@
             <div class="product_img_goods col-md-8 row">
 
                 <ul class="col-md-12 row">
+                    <volist name="product" id="vo">
+                        <li class="col-md-3">
+                            <a href="{:U('Home/Product/introduce', array('id'=>$vo['id']))}">
+                                <div class="li_img_div">
 
-                    <li class="col-md-3">
-                        <a href="tiexie.html">
-                            <div class="li_img_div">
+                                    <img src={$vo.image}>
 
-                                <img src="__IMA__/铁屑砂浆.jpg">
+                                    <span>{$vo.title}</span>
 
-                                <span>铁屑砂浆</span>
+                                </div>
+                            </a>
 
-                            </div>
-                        </a>
-
-                    </li>
-
-                    <li class="col-md-3">
-
-                        <div class="li_img_div">
-
-                            <img src="__IMA__/彩色耐磨地坪.jpg">
-
-                            <span>彩色耐磨地坪</span>
-
-                        </div>
-
-                    </li>
-
-                    <li class="col-md-3">
-
-                        <div class="li_img_div">
-
-                            <img src="__IMA__/耐油混凝土.jpg">
-
-                            <span>耐油混凝土</span>
-
-                        </div>
-
-                    </li>
-
-                    <li class="col-md-3">
-
-                        <div class="li_img_div">
-
-                            <img src="__IMA__/不发火混凝土.jpg">
-
-                            <span>不发火混凝土</span>
-
-                        </div>
-
-                    </li>
+                        </li>
+                    </volist>
 
 
-                    <li class="col-md-3">
 
-                        <div class="li_img_div">
+                    <!--<li class="col-md-3">-->
 
-                            <img src="__IMA__/裂缝修复砂浆.jpg">
+                        <!--<div class="li_img_div">-->
 
-                            <span>裂缝修复砂浆</span>
+                            <!--<img src="__IMA__/彩色耐磨地坪.jpg">-->
 
-                        </div>
+                            <!--<span>彩色耐磨地坪</span>-->
 
-                    </li>
+                        <!--</div>-->
 
-                    <li class="col-md-3">
+                    <!--</li>-->
 
-                        <div class="li_img_div">
+                    <!--<li class="col-md-3">-->
 
-                            <img src="__IMA__/金刚砂耐磨地坪1.jpg">
+                        <!--<div class="li_img_div">-->
 
-                            <span>金刚砂耐磨地坪1</span>
+                            <!--<img src="__IMA__/耐油混凝土.jpg">-->
 
-                        </div>
+                            <!--<span>耐油混凝土</span>-->
 
-                    </li>
+                        <!--</div>-->
 
-                    <li class="col-md-3">
+                    <!--</li>-->
 
-                        <div class="li_img_div">
+                    <!--<li class="col-md-3">-->
 
-                            <img src="__IMA__/下料溜槽耐磨料.jpg">
+                        <!--<div class="li_img_div">-->
 
-                            <span>下料溜槽耐磨料</span>
+                            <!--<img src="__IMA__/不发火混凝土.jpg">-->
 
-                        </div>
+                            <!--<span>不发火混凝土</span>-->
 
-                    </li>
+                        <!--</div>-->
 
-                    <li class="col-md-3">
+                    <!--</li>-->
 
-                        <div class="li_img_div">
 
-                            <img src="__IMA__/筒仓壁耐磨料.jpg">
+                    <!--<li class="col-md-3">-->
 
-                            <span>筒仓壁耐磨料</span>
+                        <!--<div class="li_img_div">-->
 
-                        </div>
+                            <!--<img src="__IMA__/裂缝修复砂浆.jpg">-->
 
-                    </li>
+                            <!--<span>裂缝修复砂浆</span>-->
+
+                        <!--</div>-->
+
+                    <!--</li>-->
+
+                    <!--<li class="col-md-3">-->
+
+                        <!--<div class="li_img_div">-->
+
+                            <!--<img src="__IMA__/金刚砂耐磨地坪1.jpg">-->
+
+                            <!--<span>金刚砂耐磨地坪1</span>-->
+
+                        <!--</div>-->
+
+                    <!--</li>-->
+
+                    <!--<li class="col-md-3">-->
+
+                        <!--<div class="li_img_div">-->
+
+                            <!--<img src="__IMA__/下料溜槽耐磨料.jpg">-->
+
+                            <!--<span>下料溜槽耐磨料</span>-->
+
+                        <!--</div>-->
+
+                    <!--</li>-->
+
+                    <!--<li class="col-md-3">-->
+
+                        <!--<div class="li_img_div">-->
+
+                            <!--<img src="__IMA__/筒仓壁耐磨料.jpg">-->
+
+                            <!--<span>筒仓壁耐磨料</span>-->
+
+                        <!--</div>-->
+
+                    <!--</li>-->
 
 
                 </ul>
@@ -377,68 +380,69 @@
             <div class="col-md-2"></div>
 
             <div class="col-md-8">
+                <volist name="example" id="vo">
+                    <div class="col-md-4">
 
-                <div class="col-md-4">
+                        <div class="thumbnail">
 
-                    <div class="thumbnail">
+                            <img src={$vo.image} class="img-responsive">
 
-                        <img src="__IMA__/BSYH.jpg" class="img-responsive">
+                            <div class="caption">
 
-                        <div class="caption">
+                                <h3>{$vo.title}</h3>
 
-                            <h3>北京京芯产业园</h3>
+                                {$vo.describe}
 
-                            <p>该项目总占地面积为77,650平方米， 总建筑面积为231,591平方米， 主要建设包括新建4幢15层高的办公楼。</p>
-
-                            <p><a href="beijing.html" class="btn btn-default" role="button">查看详情</a></p>
-
-                        </div>
-
-                    </div>
-
-                </div>
-
-                <div class="col-md-4">
-
-                    <div class="thumbnail">
-
-                        <img src="__IMA__/BSYH2.jpg" class="img-responsive">
-
-                        <div class="caption">
-
-                            <h3>包商银行商务大厦</h3>
-
-                            <p>该项目计划总投资27亿元，占地面积49.77亩，总建筑面积26万平方米，主要建设总部办公大楼、五星级酒店、金融大楼及裙楼。</p>
-
-                            <p><a href="#" class="btn btn-default" role="button">查看详情</a></p>
+                                <p><a href="{:U('Home/example/introduce', array('id'=>$vo['id']))}" class="btn btn-default" role="button">查看详情</a></p>
+                            </div>
 
                         </div>
 
                     </div>
+                </volist>
+
+
+
+                <!--<div class="col-md-4">-->
+
+                    <!--<div class="thumbnail">-->
+
+                        <!--<img src="__IMA__/BSYH2.jpg" class="img-responsive">-->
+
+                        <!--<div class="caption">-->
+
+                            <!--<h3>包商银行商务大厦</h3>-->
+
+                            <!--<p>该项目计划总投资27亿元，占地面积49.77亩，总建筑面积26万平方米，主要建设总部办公大楼、五星级酒店、金融大楼及裙楼。</p>-->
+
+                            <!--<p><a href="#" class="btn btn-default" role="button">查看详情</a></p>-->
+
+                        <!--</div>-->
+
+                    <!--</div>-->
+
+                <!--</div>-->
+
+                <!--<div class="col-md-4">-->
+
+                    <!--<div class="thumbnail">-->
+
+                        <!--<img src="__IMA__/1.jpg" class="img-responsive">-->
+
+                        <!--<div class="caption">-->
+
+                            <!--<h3>包商银行商务大厦</h3>-->
+
+                            <!--<p>该项目计划总投资27亿元，占地面积49.77亩，总建筑面积26万平方米，主要建设总部办公大楼、五星级酒店、金融大楼及裙楼。</p>-->
+
+                            <!--<p><a href="#" class="btn btn-default" role="button">查看详情</a></p>-->
+
+                        <!--</div>-->
+
+                    <!--</div>-->
 
                 </div>
 
-                <div class="col-md-4">
-
-                    <div class="thumbnail">
-
-                        <img src="__IMA__/1.jpg" class="img-responsive">
-
-                        <div class="caption">
-
-                            <h3>包商银行商务大厦</h3>
-
-                            <p>该项目计划总投资27亿元，占地面积49.77亩，总建筑面积26万平方米，主要建设总部办公大楼、五星级酒店、金融大楼及裙楼。</p>
-
-                            <p><a href="#" class="btn btn-default" role="button">查看详情</a></p>
-
-                        </div>
-
-                    </div>
-
-                </div>
-
-            </div>
 
             <div class="col-md-2"></div>
 
@@ -472,39 +476,36 @@
 
             <div class="col-md-8">
 
-                <div class="index_about_us col-md-6">
+                <div class="index_about_us col-md-3">
 
-                    <div class="col-md-6">
+                    <div class="col-md-12">
 
                         <img src="__IMA__/JTHY.PNG" class="img-responsive">
 
                     </div>
 
-                    <div class="col-md-6">
+                    <!--<div class="col-md-6">-->
 
-                        北京吉通恒远科技有限公司成立于2012年，是一家集研发、生产、销售和技术咨询服务为一体的综合性公司。
-                        公司专注于耐磨料及特种砂浆的生产和销售，主要产品包括：金刚砂耐磨地坪材料、高强耐磨料、不发火砂浆、防辐射砂浆、金刚砂原材料等。
-                        公司在提供高性价比的产品的之外，同时还为不同客户提供实用、经济、创新的施工方案，从而满足客户全方位的需求。
+                        <!--北京吉通恒远科技有限公司成立于2012年，是一家集研发、生产、销售和技术咨询服务为一体的综合性公司。-->
+                        <!--公司专注于耐磨料及特种砂浆的生产和销售，主要产品包括：金刚砂耐磨地坪材料、高强耐磨料、不发火砂浆、防辐射砂浆、金刚砂原材料等。-->
+                        <!--公司在提供高性价比的产品的之外，同时还为不同客户提供实用、经济、创新的施工方案，从而满足客户全方位的需求。-->
 
-                    </div>
+                    <!--</div>-->
 
                 </div>
 
 
-                <div class="index_about_us col-md-6" style="margin-bottom: 30px">
+                <div class="index_about_us col-md-9" style="margin-bottom: 30px">
 
-                    <div class="col-md-6">
+                    <!--<div class="col-md-6">-->
 
-                        <img src="__IMA__/1.jpg" class="img-responsive">
+                        <!--<img src="__IMA__/1.jpg" class="img-responsive">-->
 
-                    </div>
+                    <!--</div>-->
 
-                    <div class="col-md-6">
+                    <div class="col-md-12">
 
-                        公司坚持以创新带动发展，以真诚服务客户的理念，聚集了一批资深的建筑材料专家以及年轻而充满激情的研发创新团队，
-                        并与多所高校开展技术研发合作，是行业内领先前沿的现代化企业。
-                        北京吉通恒远科技有限公司自成立以来，经过5年的稳步发展，形成了具有自身特色的企业文化和服务理念。
-                        祟尚：“创新发展，专业服务、与客户、员工、股东共同发展，共创辉煌”。
+                        {$aboutUs.describe}
 
 
                     </div>
